# timbre-shift

./: .gitignore  README.md  pyproject.toml  setup_mac.command  start.command
configs/: pipeline.example.yaml
docs/: MAO_BUYI_TRAINING_SET.md  NEXT_OPTIMIZATIONS.md  PIPER_TTS.md  TRANSFER_CN.md  WEB_FUNCTION_MAP.md  WEB_INTERFACE_CONTRACT.md  architecture.md  ethics.md
scripts/: README.md  package_project.sh
src/timbre_shift/: __init__.py  audio.py  cli.py  commands.py  deharsh.py  demucs.py  diagnostics.py  diction.py  download_names.py  generation_history.py  history_actions.py  library.py  library_common.py  library_db.py  library_models.py  library_rows.py  library_samples.py  library_songs.py  library_voice_models.py  library_voices.py  mix_styles.py  pipeline.py  pipeline_config.py  pipeline_conversion.py  pipeline_environment.py  (+42 more)
tests/: audio_test_utils.py  test_ai_source_repair_variant.py  test_audio.py  test_commands.py  test_deharsh.py  test_diagnostics.py  test_diction.py  test_engine_registry.py  test_library.py  test_pipeline.py  test_pipeline_engines.py  test_pipeline_library.py  test_pre_rvc_repair.py  test_rvc_applio.py  test_rvc_mlx_cache.py  test_rvc_presets.py  test_rvc_variant_rendering.py  test_seed_vc.py  test_seedvc_cache.py  test_segment_repair_blend.py  test_separation.py  test_source_vocal_quality.py  test_style_postprocess.py  test_tts.py  test_vocal_segments.py  test_voice_models.py  test_voice_samples.py  test_web_experience.py  test_web_interface_contract.py  test_web_state.py  test_web_uploads.py  test_workflow_features.py
(+43 files in other folders)
